# MolGrapher

./: .gitignore  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  README_DOCKER.md  docker_build.sh  docker_run.sh  install_packages.sh  install_paddleocr.sh  install_paddleocr_gpu.sh  pyproject.toml  setup.py
.github/workflows/: install-test.yml
data/: config_dataset_graph.json  config_dataset_graph_2.json  config_dataset_images.json  config_dataset_keypoint.json  config_training_graph.json  config_training_graph_2.json  config_training_keypoint.json
data/ocr_mapping/: ocr_atoms_classes_mapping copy.json  ocr_atoms_classes_mapping.json
data/vocabularies/: vocabulary_atoms_120.json  vocabulary_atoms_141.json  vocabulary_atoms_182.json  vocabulary_bonds_5.json  vocabulary_bonds_6.json  vocabulary_bonds_8.json
molgrapher/data_modules/: data_module.py
molgrapher/datasets/: dataset_graph.py  dataset_graph_cede.py  dataset_image.py  dataset_keypoint.py  dataset_keypoint_cede.py  dataset_molfile.py
molgrapher/models/: abbreviation_detector.py  decimer.py  graph_classifier.py  graph_constructor.py  graph_recognizer.py  imago.py  img2mol.py  keypoint_detector.py  molgrapher_model.py  molscribe.py  molvec.py  osra.py
molgrapher/scripts/: kill_processes_vscode.sh
molgrapher/scripts/annotate/: create_input_json.py  kill_processes_predict.sh  predict_molgrapher.py  run.sh  run_predict.sh
molgrapher/scripts/annotate/config/: dc-applications-2022-3-0.yaml  dc-applications-2022-3-1.yaml  dc-applications-2022-3-2.yaml  dc-uspto-molgrapher-2.template  dc-uspto-molgrapher-4.template  dc-uspto-molgrapher-a100.template  dc-uspto-molgrapher-cpu.template  dc-uspto-molgrapher-v100.template  dc-uspto-molgrapher.template  fill_config_template.sh
molgrapher/scripts/annotate/docling/: docling_convert.py  docling_convert_and_enrich.sh  enrich_docling_document.py
molgrapher/scripts/dataset/: abbreviations.csv  abbreviations.json  augment_benchmark.py  clef_abbreviations.csv  clef_abbreviations.json  exp-ad-101_atoms_weights.json  exp-ad-101_bonds_weights.json  exp-ad-201_atoms_weights.json  exp-ad-201_bonds_weights.json  get_benchmark_abbreviations.py  get_benchmark_abbreviations_jpo.py  get_classes_weights.py  jpo_abbreviations.csv  jpo_abbreviations.json  uspto-10k-abb_abbreviations.csv  uspto-10k-abb_abbreviations.json  uspto-10k-l_abbreviations.csv  uspto_abbreviations.csv  uspto_abbreviations.json
molgrapher/scripts/evaluate/: evaluate_graph_classifier.py  evaluate_keypoints_detector.py  evaluate_molecular_recognition.py  evaluate_molecular_recognition_baselines.py  kill_processes_evaluate.sh
molgrapher/scripts/train/: kill_processes_train_graph.sh  kill_processes_train_keypoint.sh  train_graph_classifier.py  train_keypoint_detector.py
molgrapher/scripts/visualize/: kill_processes_visualize.sh  visualize_features_maps.py  visualize_outliers_molecular_recognition.py  visualize_prediction_map.py  visualize_training_graph_classifier.py  visualize_training_keypoints_detector.py
molgrapher/utils/: utils_augmentation.py  utils_dataset.py  utils_ddp.py  utils_evaluation.py  utils_graph.py  utils_graph_classifier.py  utils_logging.py  utils_postprocessing.py  utils_training.py  utils_visualization.py
