[project]
name = "molgrapher"
version = "1.0.0"
description = "Molgrapher"
# TODO transform more old metadata over into here
authors = [{ name = "Georg Heiler", email = "heiler@csh.ac.at" }, { name = "Lucas Morin", email = "lum@zurich.ibm.com"}]
requires-python = "~= 3.12"

[tool.pixi.project]
platforms = ["linux-64", "win-64", "linux-aarch64", "osx-arm64"]
channels = ["conda-forge"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.environments]
molgrapher-cpu = { features = [
  "molgrapher",
  "molgrapher-cpu",
  "notebookdev",
], solve-group = "molgrapher-cpu", no-default-feature = true }

molgrapher-gpu = { features = [
"molgrapher",
  "molgrapher-gpu",
  "notebookdev",
], solve-group = "molgrapher-gpu", no-default-feature = true }

[tool.pixi.feature.molgrapher.dependencies]
python="~=3.12"
pip = "*"
shapely = "~=2.0.7"
scikit-learn = "~=1.6.1"
seaborn = "~=0.13.2"
more-itertools = "~=10.6.0"
rdkit = "~=2024.9.6"
CairoSVG = "~=2.7.1"
nltk = "~=3.9.1"
scipy = "<1.14"
numpy = "<2"
ccache = "~=4.10.1"

[tool.pixi.feature.molgrapher.pypi-dependencies]
mol-depict = { git = "https://github.com/DS4SD/MolDepictor.git", rev = "b331e95d78b681e0943747120729de68086a384c" }
molgrapher = { path = ".", editable = true }
docling = "~=2.28.0"
pytorch-lightning = ">=2.5.0,<2.6"
torch-geometric = "~=2.6.1"
timm = "~=1.0.15"
mahotas = "~=1.4.18"
# this package only longer works with old numpy and old scipy and old python 3.12
SmilesPE = ">=0.0.3,<0.1"
rouge-score = ">=0.1.2,<0.2"
albumentations = "~=2.0.5"
paddleocr = "~=2.10.0"
torchsummary = "~=1.5.1"
weighted-levenshtein = ">=0.2.2,<0.3" 
fastprogress = "~=1.0.3"
gensim = "~=4.3.3"
opencv-python = "~=4.11.0.86"


[tool.pixi.feature.molgrapher-cpu.dependencies]
[tool.pixi.feature.molgrapher-cpu.pypi-dependencies]
torch = { version = "~=2.6.0", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.21.0,<0.22", index = "https://download.pytorch.org/whl/cpu" }
paddlepaddle = { version = ">=3.0.0rc1,<3.1", index = "https://www.paddlepaddle.org.cn/packages/stable/cpu/" }

[tool.pixi.feature.molgrapher-gpu]
system-requirements = { cuda = "12.6" }
[tool.pixi.feature.molgrapher-gpu.dependencies]
[tool.pixi.feature.molgrapher-gpu.pypi-dependencies]
[feature.molgrapher-gpu.target.linux-64.dependencies]
torch = { version = "~=2.6.0", index = "https://download.pytorch.org/whl/cu126" }
torchvision = { version = ">=0.21.0,<0.22", index = "https://download.pytorch.org/whl/cu124" }
paddlepaddle = { version = ">=3.0.0rc1,<3.1", index = "https://www.paddlepaddle.org.cn/packages/stable/cu123/" }

[tool.pixi.feature.notebookdev.pypi-dependencies]
jupyterlab = "~=4.3.5"
jupyterlab-git = ">=0.51.0,<0.60"
ipywidgets = "~=8.1.5"

[tool.pixi.tasks]
[tool.pixi.tasks.prepare-molgrapher]
cmd = "wget https://huggingface.co/ds4sd/MolGrapher/resolve/main/models/graph_classifier/gc_gcn_model.ckpt -P ./data/models/graph_classifier/ && wget https://huggingface.co/ds4sd/MolGrapher/resolve/main/models/graph_classifier/gc_no_stereo_model.ckpt -P ./data/models/graph_classifier/ && wget https://huggingface.co/ds4sd/MolGrapher/resolve/main/models/graph_classifier/gc_stereo_model.ckpt -P ./data/models/graph_classifier/ && wget https://huggingface.co/ds4sd/MolGrapher/resolve/main/models/keypoint_detector/kd_model.ckpt -P ./data/models/keypoint_detector/"
cwd = "."
description = "Setup molgrapher, download model files from HF"

[tool.pixi.tasks.setup]
cmd = "echo 'Project setup complete'"
depends-on = ["prepare-molgrapher"]
